--- a/PersistenceContentProviderSample/app/src/main/res/layout/main_activity.xml
+++ b/PersistenceContentProviderSample/app/src/main/res/layout/main_activity.xml
@@ -21,4 +21,4 @@
     android:paddingBottom="8dp"
     android:paddingTop="8dp"
     android:scrollbars="vertical"
-    tools:context="com.example.android.contentprovidersample.MainActivity"/>
+    tools:context="com.example.android.contentprovidersample.view.MainActivity"/>
